# defringe

./: .gitignore  README.md  app.py  cast_defringe.onnx  cast_torch.py  colab_defringe.ipynb  defringe_algorithm.py  defringe_numpy.py  defringe_torch.py  defringe_wheel.js  geometry.py  onnx_runtime.py  parameters.py  params.py  pyproject.toml  sliders.py  user_defaults.json.bak  video_io.py  views.py
algorithm/: __init__.py  _common.py  green_cast.py  purple_cast.py  purple_defringe.py
archive/delivery_old/: README.md  defringe.onnx  defringe_ds.onnx  defringe_video.py
assets/: acc.css  colour.js  defringe_wheel.js  geometry.js  gradio_ui.js  pen.js
defringe/: defringe_numpy.py  defringe_torch.py  onnx_runtime.py  parameters.py  sliders.py  views.py
delivery/: cast_defringe.onnx  cast_torch.py  colab_defringe.ipynb  defringe_fp16.onnx  defringe_torch.py  eval_torch.py  export_fp16.py  export_onnx.py  providers.py  verify_onnx.py
model/: cast_defringe.onnx
tests/: test_conformance.py
