[project]
name = "defringe"
version = "0.1.0"
description = "Green- and purple-fringe removal for video/stills (CIELAB, chroma-only)."
requires-python = ">=3.14"

# Pinned (==) to the exact versions in the known-working .venv, so `uv sync`
# reproduces this state rather than re-resolving to newer releases.
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-image==0.26.0",
    "pillow==12.2.0",
    "gradio==6.17.3",
    "matplotlib==3.10.9",
]

# System dependency (not pip): ffmpeg / ffprobe must be on PATH — video_io.py
# shells out to them for decode/encode.
#
# The delivery/ ONNX export path additionally imports torch, onnx and
# onnxruntime. These are NOT installed in the current working venv, so they are
# intentionally left out of the lock. To add them as an optional extra later:
#     uv add --optional export torch onnx onnxruntime

[tool.uv]
# This is an application with a flat module layout (algorithm/, app.py,
# video_io.py at the root), not an installable package — manage deps only,
# don't try to build/install the project itself.
package = false
