[project]
name = "defringe"
version = "0.1.0"
description = "Green- and purple-fringe removal for video/stills (CIELAB, chroma-only)."
requires-python = ">=3.11"

# Pinned (==) to the exact versions in the known-working .venv, so `uv sync`
# reproduces this state rather than re-resolving to newer releases.
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-image==0.26.0",
    "pillow==12.2.0",
    "gradio==6.17.3",
    "matplotlib==3.10.9",
    # ONNX export/run — torch is heavy but folded in so the app works in one step
    "torch==2.12.0",
    "onnx==1.21.0",
    "onnxruntime==1.26.0",
    "onnxscript==0.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

# System dependency (not pip): ffmpeg / ffprobe must be on PATH — video_io.py
# shells out to them for decode/encode.
#
# The conformance suite (tests/) adds the `test` extra:  uv sync --extra test

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
# The library lives in the defringe/ package; app.py at the root is the launcher
# (both put the root on sys.path, so `import defringe` resolves without installing).
# This isn't a distributable package — manage deps only, don't build/install it.
package = false
